--- a/src/main/resources/static/css/espaceUtilisateur.css
+++ b/src/main/resources/static/css/espaceUtilisateur.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
 
-
 /* Navbar section */
 .nav {
   margin: 0;
@@ -21,11 +20,10 @@
 }
 
 .dropdown-content a {
-  cursor: pointer;
   float: right;
   background-color: black;
   margin-left: 20px;
-  margin-right: 20px;
+  margin-right: 18px;
   color: white;
   padding: 32px 16px;
   font-family: "Nunito";
@@ -113,6 +111,10 @@ body {
   background-repeat: no-repeat;
   background-size: 100% 100%;
   font-family: "Nunito";
+}
+
+a {
+  cursor: pointer;
 }
 
 
