--- a/src/main/resources/static/css/informationsUtilisateur.css
+++ b/src/main/resources/static/css/informationsUtilisateur.css
@@ -4,7 +4,7 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : 12 Apr 2021, 10:42:39
+    Created on : 18 Apr 2021, 11:09:38
     Author     : nelsonrogers
 */
 
@@ -50,7 +50,7 @@ and open the template in the editor.
 #logo {
   position: absolute;
   top: 0px;
-  left: -10px;
+  left: 0px;
   height: 100px;
   width: auto;
 }
@@ -116,10 +116,6 @@ and open the template in the editor.
   }
 }
 
-a {
-  cursor: pointer;
-}
-
 h1 {
   text-align: center;
   margin-bottom: 0px;
@@ -133,9 +129,14 @@ p {
   font-size: large;
 }
 
+a {
+  cursor: pointer;
+}
+
 body {
   font-family: "Nunito";
   background-image: url("/BG2.png");
+  background-size: cover;
   background-repeat: no-repeat;
   background-size: 100% 100%;
   display: flex;
@@ -145,23 +146,16 @@ body {
 
 #p1 {
   text-align: center;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 28%;
+  margin-right: 28%;
   font-size: 25px;
 }
 
-#reseaux {
-  margin: auto;
-  width: 992px;
-}
-
-.res {
-  border: solid;
-  padding: 1px;
-  border-width: 1px;
-  margin-bottom: 20px;
-  height: 90px;
-  background-color: white;
+#p2 {
+  text-align: center;
+  margin-left: 28%;
+  margin-right: 28%;
+  font-size: 25px;
 }
 
 img {
@@ -170,29 +164,10 @@ img {
   float: left;
 }
 
-.souhait {
-  font-family: "Nunito Sans";
-  position: relative;
-  margin-left: 105px;
-  font-size: 1.3em;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
-.volonte {
-  position: relative;
-  margin-left: 105px;
-  font-size: 1.2em;
-  margin-top: 5px;
-  width: 650px;
-}
-
 .renvoi {
-  text-decoration: none;
-  font-family: "Nunito Sans";
-  font-size: 1.4em;
-  padding-right: 5px;
-  padding-bottom: 40px;
-  color: black;
-  float: right;
+  margin-left: 28%;
+  margin-right: 28%;
+  width: 100px;
+  height: auto;
 }
+
