--- a/src/main/resources/static/css/pageAdmin.css
+++ b/src/main/resources/static/css/pageAdmin.css
@@ -1,12 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
 
-
 /* Navbar section */
 .nav {
   margin: 0;
   padding: 0;
-  font-family: "Nunito Sans";
+  font-family: "Nunito";
   font-size: 10px;
   width: 100%;
   height: 100px;
@@ -21,17 +20,21 @@
 }
 
 .dropdown-content a {
-  cursor: pointer;
   float: right;
   background-color: black;
   margin-left: 20px;
-  margin-right: 20px;
+  margin-right: 18px;
   color: white;
   padding: 32px 16px;
+  font-family: "Nunito";
   font-size: 25px;
   text-decoration: none;
   display: inline-flex;
   text-align: center;
+}
+
+.dropdown-content a:hover {
+  font-family: "Nunito Sans";
 }
 
 #logo {
@@ -101,6 +104,11 @@
   .dropdown:hover .dropdown-content {
     display: block;
   }
+}
+
+
+a {
+  cursor: pointer;
 }
 
 body {
