--- a/src/main/resources/static/css/pageSouvenirFamille.css
+++ b/src/main/resources/static/css/pageSouvenirFamille.css
@@ -1,52 +1,114 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
 
-.navbar {
-  overflow: hidden;
+/* Navbar section */
+.nav {
+  margin: 0;
+  padding: 0;
+  font-family: "Nunito";
+  font-size: 10px;
+  width: 100%;
   height: 100px;
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 999;
+  top: 0px;
+  text-align: center;
   background-color: black;
 }
 
-.navbar a {
-  font-family: "Nunito";
-  min-width: 300px;
+.dropdown .dropbtn {
+  display: none;
+}
+
+.dropdown-content a {
   float: right;
+  background-color: black;
+  margin-left: 20px;
+  margin-right: 20px;
   color: white;
-  text-align: center;
-  padding: 30px 16px;
+  padding: 32px 16px;
+  font-family: "Nunito";
+  font-size: 25px;
   text-decoration: none;
-  font-size: 35px;
+  display: inline-flex;
+  text-align: center;
 }
 
-#infos {
-  padding-left: 90px;
-  padding-right: 90px;
-}
-
-.navbar a:hover {
-  background-color: white;
-  height: 100%;
-  color: black;
-}
-
-.navbar a.active {
-  color: black;
+.dropdown-content a:hover {
   font-family: "Nunito Sans";
 }
 
-.navbar img {
-  height: 100%;
-  width: auto;
-  border: none;
+#logo {
   position: absolute;
-  float: left;
+  top: 0px;
+  left: -10px;
+  height: 100px;
+  width: auto;
 }
 
+/* Media query section */
+
+@media screen and (max-width: 1300px) {
+  /* The dropdown container */
+  .dropdown {
+    z-index: 999;
+    color: white;
+    overflow: hidden;
+  }
+
+  /* Dropdown button */
+  .dropdown .dropbtn {
+    display: block;
+    z-index: 500;
+    font-family: "Nunito";
+    font-size: 35px;
+    width: 100%;
+    position: relative;
+    top: 0px;
+    height: 80px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 30px 16px;
+    background: transparent;
+  }
+
+  /* Add a red background color to navbar links on hover */
+  .navbar a:hover,
+  .dropdown:hover .dropbtn {
+    font-family: "Nunito Sans";
+  }
+
+  /* Dropdown content (hidden by default) */
+  .dropdown-content {
+    display: none;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    float: none;
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+  }
+
+  /* Add a grey background color to dropdown links on hover */
+  .dropdown-content a:hover {
+    font-family: "Nunito Sans";
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+}
+
+a {
+  cursor: pointer;
+}
 
 h1 {
   text-align: center;
