--- a/src/main/resources/static/css/preferencesReseaux.css
+++ b/src/main/resources/static/css/preferencesReseaux.css
@@ -4,7 +4,7 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : 12 Apr 2021, 10:42:39
+    Created on : 18 Apr 2021, 12:49:25
     Author     : nelsonrogers
 */
 
@@ -20,6 +20,7 @@ and open the template in the editor.
   width: 100%;
   height: 100px;
   position: fixed;
+  z-index: 990;
   top: 0px;
   text-align: center;
   background-color: black;
@@ -50,7 +51,7 @@ and open the template in the editor.
 #logo {
   position: absolute;
   top: 0px;
-  left: -10px;
+  left: 0px;
   height: 100px;
   width: auto;
 }
@@ -116,10 +117,6 @@ and open the template in the editor.
   }
 }
 
-a {
-  cursor: pointer;
-}
-
 h1 {
   text-align: center;
   margin-bottom: 0px;
@@ -150,49 +147,124 @@ body {
   font-size: 25px;
 }
 
+
 #reseaux {
+  position: relative;
   margin: auto;
-  width: 992px;
+  width: 792px;
 }
 
 .res {
   border: solid;
   padding: 1px;
   border-width: 1px;
-  margin-bottom: 20px;
-  height: 90px;
-  background-color: white;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  min-height: 70px;
+  float: inherit;
+}
+
+a {
+  cursor: pointer;
 }
 
 img {
-  width: auto;
-  height: 90px;
+  width: 70px;
+  height: 70px;
   float: left;
 }
 
-.souhait {
-  font-family: "Nunito Sans";
+label#paypal,
+label#pinterest,
+label#facebook,
+label#twitter,
+label#instagram,
+label#google {
   position: relative;
-  margin-left: 105px;
-  font-size: 1.3em;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  left: 15px;
+  top: 20px;
+  font-size: 1.4em;
+}
+
+input[type="checkbox"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+}
+
+[type="checkbox"]:not(:checked) {
+  float: right;
+  content: "";
+  width: 2.2em;
+  height: 2.2em;
+  border: 2px solid black;
+  margin-top: 20px;
+  background: white;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  transition: all 0.275s;
+}
+
+:checked {
+  background-color: black;
+  margin-top: 20px;
+  float: right;
+  width: 2.2em;
+  height: 2.2em;
+}
+
+#connectTwitter {
+  position: relative;
+  left: 250px;
+  top: 20px;
+  background-color: black;
+  color: white;
+  font-family: 'Nunito Sans';
+  height: 1.3em;
+  padding: 5px;
+  text-decoration: none;
 }
 
 .volonte {
-  position: relative;
-  margin-left: 105px;
-  font-size: 1.2em;
-  margin-top: 5px;
-  width: 650px;
+  border: solid;
+  border-width: 1px;
+  font-size: 1em;
+  list-style: none;
+  width: 788px;
 }
 
-.renvoi {
-  text-decoration: none;
-  font-family: "Nunito Sans";
-  font-size: 1.4em;
-  padding-right: 5px;
-  padding-bottom: 40px;
-  color: black;
+.volonte [type="checkbox"]:not(:checked) {
+  position: relative;
+  margin-top: 6px;
+  margin-left: 5px;
+  float: inherit;
+  content: "";
+  width: 1.3em;
+  height: 1.3em;
+  border: 2px solid black;
+  background: white;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  transition: all 0.275s;
+}
+
+.volonte :checked {
+  background-color: black;
+  margin-top: 6px;
+  margin-left: 5px;
+  float: inherit;
+  width: 1.3em;
+  height: 1.3em;
+}
+
+#valider {
+  background-color: black;
+  position: relative;
+  top: 10px;
   float: right;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  border: none;
+  width: 160px;
+  color: white;
+  font-family: "Nunito Sans";
+  font-size: 1.8em;
 }
