--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -65,6 +65,7 @@
             id="commNaiss"
             th:field="*{communeNaiss}"
             placeholder="NOM DE LA COMMUNE DE NAISSANCE*"
+            required
           />
           <input
             type="text"
@@ -72,6 +73,7 @@
             id="lieuNaiss"
             th:field="*{codePostal}"
             placeholder="CODE COMMUNE CORRESPONDANT*"
+            required
           />
         </p>
         <p>
