--- a/src/main/resources/templates/pageSouvenir.html
+++ b/src/main/resources/templates/pageSouvenir.html
@@ -6,39 +6,30 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" type="text/css" th:href="@{/css/pageSouvenir.css}" href="../static/css/pageSouvenir.css" />
         <title>Page souvenir</title>
-        <div class="nav">
+        <nav class="nav">
             <div class="container">
-                    <div class="logo">
-                        <a href="#" th:href="@{/welcome}"><img id="logo" src="/logoNavbar.png"></a>
+                <div class="logo">
+                    <a href="#" th:href="@{/welcome}"><img id="logo" src="/logoNavbar.png"></a>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Menu
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <form id="logoutForm" method="POST" th:action="@{/logout}" action="#">
+                            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+                        </form>
+                        <a onclick="document.forms['logoutForm'].submit()">Déconnexion</a>
+                        <a href="#" th:href="@{/user/pageSouvenir}">Page souvenir</a>
+                        <a href="#" th:href="@{/user/preferencesReseaux}" class="active">Préférences Réseaux</a>
+                        <a href="#" th:href="@{/user/informationsUtilisateur}">Informations Utilisateur</a>
                     </div>
-                    <div class="dropdown">
-                        <button class="dropbtn">Menu
-                            <i class="fa fa-caret-down"></i>
-                        </button>
-                        <div sec:authorize="hasRole('ROLE_ADMIN')">
-
-                            <div class="dropdown-content">
-                                <form id="logoutForm" method="POST" th:action="@{/logout}" action="#">
-                                    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
-                                </form>
-                                <a onclick="document.forms['logoutForm'].submit()">Déconnexion</a>
-                            </div>
-                        </div>
-                            <div class="dropdown-content">
-                                <form id="logoutForm" method="POST" th:action="@{/logout}" action="#">
-                                    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
-                                </form>
-                                <a onclick="document.forms['logoutForm'].submit()">Déconnexion</a>
-                                <a href="#" th:href="@{/user/pageSouvenir}">Page souvenir</a>
-                                <a href="#" th:href="@{/user//preferencesResaux}" class="active">Préférences Réseaux</a>
-                                <a href="#" th:href="@{/user/informationsUtilisateur}">Informations Utilisateur</a>
-                            </div>
-                    </div>
+                </div>
             </div>
-        </div>
-  </head>
-  <body>
-        <div sec:authorize="hasRole('ROLE_USER')">
+        </nav>
+    </head>
+    <body>
+        <div sec:authorize="isAuthenticated()">
             <h1>Creéz une page souvenir à laquelle vos proches pourront accéder</h1>
 
             <p id="p1">Vous pouvez insérer des images, des vidéos ou des textes de votre choix auxquels vos proches auront accès une fois que ce compte leur sera ouvert.</p>
@@ -55,31 +46,6 @@
                 <p>Écrivez un texte à vos proches : </p>
                 <textarea name="texte" id="texte" cols="30" rows="20"></textarea>
                 <button id="boutonAjouter">Ajouter</button>
-            </div>
-        </div>
-        <div sec:authorize="hasRole('ROLE_FAMILLE')">
-            <h1>Bienvenue dans la page souvenir</h1>
-
-            <p id="p1">Vous trouverez ici les documents que votre proche vous a laissé. Vous pouvez les consulter et les télécharger.</p>
-            <br><br>
-            <div id="telechargeFichiers">
-                <p>Fichiers à télécharger : </p>
-                <div id="fichiers">Fichiers ajoutés apparaitront ici<br><a href="">Salut</a></div>
-
-            </div>
-            <div id="zoneTexte">
-                <p>Le message de votre proche : </p>
-                <div>
-                    <img id="guillemets" src="/guillemets.png" height="80" width="80">
-                    <br><br>
-                    <p id="texte">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Fusce aliquet, magna eu pharetra placerat, erat magna porta ligula, non euismod ipsum lacus eu enim.
-                        Cras lacus ligula, mollis lacinia diam vitae, congue consequat urna. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                        Duis mattis vitae mauris in interdum. Cras augue turpis, pretium at lacinia placerat, efficitur euismod mauris. Phasellus quis vehicula sem.
-                        Ut a tortor ac nunc maximus tincidunt a in justo. Sed consectetur vulputate enim ut blandit.
-                    </p>
-                </div>
             </div>
         </div>
     </body>
