--- a/src/main/resources/static/css/espaceUtilisateur.css
+++ b/src/main/resources/static/css/espaceUtilisateur.css
@@ -146,3 +146,17 @@ div.centre {
 p {
   width: 650px;
 }
+
+#boutonAdmin {
+    font-family: "Nunito Sans";
+    height: 50px;
+    margin-top: 80px;
+    margin-right: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    float: right;
+    background-color: black;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
