--- a/src/main/resources/templates/connect/twitterConnect.html
+++ b/src/main/resources/templates/connect/twitterConnect.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
     xmlns:th="http://www.thymeleaf.org" lang="fr">
 
@@ -27,4 +27,49 @@
     <script th:src="@{/js/bootstrap.min.js}" src="../static/js/bootstrap.min.js"></script>
 </body>
 
+</html>-->
+
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+    xmlns:th="http://www.thymeleaf.org" lang="fr">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Connectez-vous à Twitter</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/twitterConnect.css}" href="twitterConnect.css" />
+    <div class="navbar">
+        <img src="/logoNavbar.png" />
+        <p id="titrenavbar">Connexion à Twitter</p>
+      </div>
+</head>
+<body>
+    <div class="container" id="connexion">
+        <h1>Connectez-vous à Twitter</h1>
+        <form th:action="@{/connect/twitter}" method="POST">
+            <p>Vous n'êtes pas encore connecté à Twitter.</p>
+            <img src="/twitter.png" id="logotwitter">
+            <p><button type="submit" id="Bconnexion">Se connecter</button></p>
+        </form>
+    </div>
+    <div id="parametres">
+        <h1>Paramétrez vos préférences réseaux</h1>
+        <form th:action="@{/connect/twitter}" method="POST" id="para">
+            <div class="IDTweet" >
+                <p>Vous pouvez ici indiquer l'ID du tweet que vous voulez retweeter à votre décès. Si le tweet est supprimé avant votre décès, il n'y aura aucune action sur votre compte</p>
+                <input type="number" id="IDRT" placeholder="ID du tweet">
+            </div>
+            <div class="MP">
+                <p>Vous pouvez ici indiquer le destinataire ainsi que le contenu du Message privé que vous voulez envoyer à votre décès.</p>
+                <input type="text" id="UNDestinataire" placeholder="@usernameDuDestinataire">
+                </br>
+                <textarea name="texte" id="ContenuMP" placeholder="Tapez le contenu du MP que vous voulez envoyer"></textarea>
+            </div>
+            <p><button type="submit" id="Bvalidation">Valider les choix</button></p>
+        </form>
+    </div>
+    <a id="retour" href="../welcome.html" th:href="@{/}">Retour à la page principale</a>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script th:src="@{/js/bootstrap.min.js}" src="../static/js/bootstrap.min.js"></script>
+</body>
 </html>
