--- a/src/main/resources/templates/connect/twitterConnected.html
+++ b/src/main/resources/templates/connect/twitterConnected.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
     xmlns:th="http://www.thymeleaf.org" lang="fr">
 
@@ -19,7 +19,7 @@
             <a href="http://twitter.com" th:href="${connection.profileUrl}" th:text="${connection.displayName}">Nom de
                 l'utilisateur twitter</a>
             <!--/* Si on est connecté à twitter */-->
-            <div>
+        <!--    <div>
                 Vous pouvez <a href="../twitter/postTweet.html" th:href="@{/twitter/tweet}">retweeter</a>
             </div>
         </div>
@@ -30,4 +30,50 @@
     <script th:src="@{/js/bootstrap.min.js}" src="../static/js/bootstrap.min.js"></script>
 </body>
 
+</html>-->
+        
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+    xmlns:th="http://www.thymeleaf.org" lang="fr">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Connectez-vous à Twitter</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/twitterConnected.css}" href="twitterConnected.css" />
+    <div class="navbar">
+        <img src="/logoNavbar.png" />
+        <p id="titrenavbar">Connexion à Twitter</p>
+      </div>
+</head>
+<body>
+    <div class="container" id="connexion">
+        <h1>Vous êtes connecté(e) à Twitter</h1>
+        <div th:each="connection : ${connections}">
+            <img src="../../static/images/defaultPersonImage.jpg" th:src="${connection.imageUrl}" alt="" id="logotwitter"/>
+        </br>
+            <a href="http://twitter.com" th:href="${connection.profileUrl}" th:text="${connection.displayName}" id="UsernameUtil">Nom de
+                l'utilisateur Twitter</a>
+            <div>
+    </div>
+    <div id="parametres">
+        <h1>Paramétrez vos préférences réseaux</h1>
+        <form th:action="@{/connect/twitter}" method="POST" id="para">
+            <div class="IDTweet" >
+                <p>Vous pouvez ici indiquer l'ID du tweet que vous voulez retweeter à votre décès. Si le tweet est supprimé avant votre décès, il n'y aura aucune action sur votre compte</p>
+                <input type="number" id="IDRT" placeholder="ID du tweet">
+            </div>
+            <div class="MP">
+                <p>Vous pouvez ici indiquer le destinataire ainsi que le contenu du Message privé que vous voulez envoyer à votre décès.</p>
+                <input type="text" id="UNDestinataire" placeholder="@usernameDuDestinataire">
+                </br>
+                <textarea name="texte" id="ContenuMP" placeholder="Tapez le contenu du MP que vous voulez envoyer"></textarea>
+            </div>
+            <p><button type="submit" id="Bvalidation">Valider les choix</button></p>
+        </form>
+    </div>
+    <a id="retour" href="../welcome.html" th:href="@{/}">Retour à la page principale</a>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script th:src="@{/js/bootstrap.min.js}" src="../static/js/bootstrap.min.js"></script>
+</body>
 </html>
