--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -57,12 +57,12 @@
                 <div id="texteAccueil">
                   <p>
                     Retrouvez ici toutes les informations importantes de votre compte dans
-                    l’onglet « Informations utilisateur ».
+                    l’onglet « Informations Utilisateur ».
                   </p>
                   <br />
                   <p>
-                    Des tutoriels sont mis à votre disposition dans l’onglet « Tutoriels »
-                    afin de paramétrer le futur de vos données numériques.
+                    Vous pourrez paramétrer l'avenir de vos données numériques dans 
+                    l'onglet « Préférences Réseaux ».
                   </p>
                   <br />
                   <p>
@@ -71,18 +71,18 @@
                   </p>
                 </div>
             </div>
-
+            <!--
             <a th:href="@{/connect/twitter}"><button>Se Connecter à Twitter</button></a>
 
             <h2>Welcome <span th:text="${#authentication.name}">Untel</span></h2>
-
+            -->
             <!-- Pour les utilisateurs qui ont le rôle 'ROLE_USER' -->
-            <div sec:authorize="hasRole('ROLE_USER')">
+            <!--<div sec:authorize="hasRole('ROLE_USER')">
                 <h3>Vous êtes un simple utilisateur !</h3>
                 <a href="#" th:href="@{/user/pageUser}">Page réservée aux utilisateurs connectés</a>
-            </div>
+            </div>-->
             <div sec:authorize="hasRole('ROLE_ADMIN')">
-                 <a href="#" th:href="@{/admin/pageAdmin}">Page Admin</a>
+                <a href="#" th:href="@{/admin/pageAdmin}"><button id="boutonAdmin">Accéder à la Page Admin</button></a>
             </div>
         </body>
     </div>
