--- a/src/main/resources/static/css/inscription.css
+++ b/src/main/resources/static/css/inscription.css
@@ -33,7 +33,7 @@
 body {
   font-family: "Nunito";
   background-repeat: no-repeat;
-  background-image: url(images/BG1.png);
+  background-image: url(/BG1.png);
   background-attachment: fixed;
   background-size: cover;
   display: flex;
