ajout des images de fond

--- a/src/main/resources/static/css/preferencesReseaux.css
+++ b/src/main/resources/static/css/preferencesReseaux.css
@@ -132,7 +132,7 @@ p {
 
 body {
   font-family: "Nunito";
-  background-image: url("/BG2.png");
+  background-image: url("/fond2.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   display: flex;
