--- a/src/main/resources/static/css/informationsUtilisateur.css
+++ b/src/main/resources/static/css/informationsUtilisateur.css
@@ -135,7 +135,7 @@ a {
 
 body {
   font-family: "Nunito";
-  background-image: url("/BG2.png");
+  background-image: url("/fond2.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-size: 100% 100%;
