--- a/src/main/resources/static/css/pageSouvenirFamille.css
+++ b/src/main/resources/static/css/pageSouvenirFamille.css
@@ -129,7 +129,7 @@ p {
 
 body {
   font-family: "Nunito";
-  background-image: url("images/fond2.png");
+  background-image: url("/fond2.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
