--- a/src/main/resources/static/css/donnesTwitter.css
+++ b/src/main/resources/static/css/donnesTwitter.css
@@ -1,13 +1,3 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 18 Apr 2021, 17:11:03
-    Author     : nelsonrogers
-*/
-
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
 
@@ -45,23 +35,9 @@ body {
 }
 
 h1 {
-color: black;
-font-size: 2em;
-font-family: "Nunito Sans";
-}
-
-#connexion {
-    border : solid ;
-    border-color: black;
-    background-color: white;
-    border-width: 2px;
-    width: 400px;
-    height: 400px;
-    font-family: 'Nunito';
-    padding: 5px;
-    text-align: center;
-    align-content: center;
-    margin-left: 500px;
+    color: black;
+    font-size: 2em;
+    font-family: "Nunito Sans";
 }
 
 #UsernameUtil {
@@ -70,10 +46,52 @@ font-family: "Nunito Sans";
     margin-bottom: 20px;
 }
 
-#logotwitter {
-    height: 150px;
-    margin-top: 25px;
-    margin-bottom: 10px;
+.IDTweet {
+    width: 300px;
+    margin: 10px;
+    margin-left: 30px;
+}
+
+#IDRT {
+    font-size: 1.2em;
+}
+
+.MP {
+    width: 500px;
+    margin: 10px;
+    margin-left: 50px;
+}
+
+#UNDestinataire {
+    width: 400px;
+    font-size: 1.2em;
+}
+
+#ContenuMP {
+    margin-top: 10px;
+    font-size: 1.2em;
+    width: 400px;
+    height: 100px;
+}
+
+#parametres {
+    border : solid ;
+    border-color: black;
+    background-color: white;
+    border-width: 2px;
+    width: 940px;
+    height: 400px;
+    font-family: 'Nunito';
+    padding: 5px;
+    text-align: center;
+    align-content: center;
+    position: absolute;
+    top: 140px;
+    left: 250px;
+}
+
+#para {
+    display: inline-flex;
 }
 
 button {
@@ -84,31 +102,29 @@ button {
     font-family: "Nunito Sans";
     background-color: black;
     color: white;
-    padding: 10px;
-    width: 600px;
+    padding: 7px;
+    width: 300px;
 }
 
 #Bvalidation{
-    display: inline-block;
     position: relative;
-    left: -100px;
-    top: 100px;
-    cursor: pointer;
+    left: -870px;
+    top: 230px;
 }
   
 #retour {
     position: absolute;
-    bottom: 20px;
-    font-size: 1.2em;
-    left: 20px;
-    width: 300px;
+    top: 600px;
+    font-size: 3em;
+    left: 400px;
+    width: 650px;
     text-align: center;
     text-decoration: none;
     font-family: "Nunito Sans";
     background-color: black;
     color: white;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
   
 #retour:hover {
@@ -126,8 +142,4 @@ body {
 
 input, ::placeholder {
     font-family: 'Nunito';
-}
-
-#div-bouton {
-    position: relative;
 }
