--- a/src/main/resources/static/css/espaceUtilisateur.css
+++ b/src/main/resources/static/css/espaceUtilisateur.css
@@ -150,7 +150,7 @@ p {
 #boutonAdmin {
     font-family: "Nunito Sans";
     height: 50px;
-    margin-top: 80px;
+    margin-top: 30px;
     margin-right: 20px;
     padding-left: 20px;
     padding-right: 20px;
@@ -159,4 +159,10 @@ p {
     color: white;
     border: none;
     cursor: pointer;
+}
+
+h3 {
+    font-family: "Nunito";
+    text-align: center;
+    color: green;
 }
