--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -54,6 +54,7 @@
             <h1>Bienvenue dans l’espace utilisateur de Legac.e</h1>
             <!-- Malgré le passage par la page connexion, on n'est pas connecté et cette partie ne s'affiche pas-->
             <div sec:authorize="isAuthenticated()">
+                <h3 th:text="${resultat}">Message de succès ou d'erreur</h3>
                 <div id="texteAccueil">
                   <p>
                     Retrouvez ici toutes les informations importantes de votre compte dans
@@ -71,16 +72,6 @@
                   </p>
                 </div>
             </div>
-            <!--
-            <a th:href="@{/connect/twitter}"><button>Se Connecter à Twitter</button></a>
-
-            <h2>Welcome <span th:text="${#authentication.name}">Untel</span></h2>
-            -->
-            <!-- Pour les utilisateurs qui ont le rôle 'ROLE_USER' -->
-            <!--<div sec:authorize="hasRole('ROLE_USER')">
-                <h3>Vous êtes un simple utilisateur !</h3>
-                <a href="#" th:href="@{/user/pageUser}">Page réservée aux utilisateurs connectés</a>
-            </div>-->
             <div sec:authorize="hasRole('ROLE_ADMIN')">
                 <a href="#" th:href="@{/admin/pageAdmin}"><button id="boutonAdmin">Accéder à la Page Admin</button></a>
             </div>
