--- a/src/main/resources/static/css/pageAdmin.css
+++ b/src/main/resources/static/css/pageAdmin.css
@@ -182,3 +182,9 @@ display: none;
     margin-top: 50px;
     margin-left: 10%;
 }
+
+h3 {
+    font-family: "Nunito";
+    color: green;
+    margin-left: 65px
+}
