--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/inscription.css}" href="../static/css/inscription.css" />
-    <link rel="icon" type="image/png" href="/Logo.png" />
-    <title>Création d'un compte</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.png" /><link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
+    <title>Inscription</title>
     <div class="navbar">
         <a href="#" th:href="@{/welcome}"><img src="/logoNavbar.png" /></a>
       <p id="titrenavbar">Inscription</p>
