--- a/src/main/resources/templates/preferencesReseaux.html
+++ b/src/main/resources/templates/preferencesReseaux.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/preferencesReseaux.css}" href="../static/css/preferencesReseaux.css" />
-    <title>Souhaits Réseaux Utilisateur</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.png" /><link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
+    <title>Préférences Réseaux</title>
     <nav class="nav">
       <div class="container">
           <div class="logo">
