--- a/src/main/resources/templates/connect/twitterConnect.html
+++ b/src/main/resources/templates/connect/twitterConnect.html
@@ -1,34 +1,3 @@
-<!--<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-    xmlns:th="http://www.thymeleaf.org" lang="fr">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Connectez-vous à twitter</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}" href="../static/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}" href="../static/css/common.css" />
-</head>
-
-<body>
-
-    <div class="container">
-        <h1>Connectez-vous à twitter</h1>
-        <form th:action="@{/connect/twitter}" method="POST">
-            <p>You haven't created any connections with Twitter yet. Click the button to create
-                a connection between your account and your Twitter profile.
-                (You'll be redirected to Twitter where you'll be asked to authorize the connection.)</p>
-            <p><button type="submit">Se connecter</button></p>
-        </form>
-        <a href="../welcome.html" th:href="@{/}">Back to Home Page</a>
-    </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script th:src="@{/js/bootstrap.min.js}" src="../static/js/bootstrap.min.js"></script>
-</body>
-
-</html>-->
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
     xmlns:th="http://www.thymeleaf.org" lang="fr">
@@ -38,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Connectez-vous à Twitter</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/twitterConnect.css}" href="twitterConnect.css" />
+    <link rel="icon" type="image/x-icon" href="/favicon.png" /><link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
     <div class="navbar">
         <img src="/logoNavbar.png" />
         <p id="titrenavbar">Connexion à Twitter</p>
