--- a/src/main/resources/templates/donnesTwitter.html
+++ b/src/main/resources/templates/donnesTwitter.html
@@ -5,8 +5,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Connectez-vous à Twitter</title>
+    <title>Préférences Twitter</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/donnesTwitter.css}" href="donnesTwitter.css" />
+    <link rel="icon" type="image/x-icon" href="/favicon.png" /><link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
     <div class="navbar">
         <img src="/logoNavbar.png" />
         <p id="titrenavbar">Connexion à Twitter</p>
