--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -7,7 +7,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Error page</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.png" /><link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
+    <title>Page d'erreur</title>
     <link
             rel="stylesheet"
             href="error.css"
