--- a/src/main/resources/templates/informationsUtilisateur.html
+++ b/src/main/resources/templates/informationsUtilisateur.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/informationsUtilisateur.css}" href="../static/css/informationsUtilisateur.css" />
+    <link rel="icon" type="image/x-icon" href="/favicon.png" /><link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
     <title>Informations Utilisateur</title>
     <nav class="nav">
       <div class="container">
