--- a/src/main/resources/templates/pageAdmin.html
+++ b/src/main/resources/templates/pageAdmin.html
@@ -5,8 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" type="text/css" th:href="@{/css/pageAdmin.css}" href="../static/css/pageAdmin.css" />
+        <link rel="icon" type="image/x-icon" href="/favicon.png" /><link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
 
-        <title>Espace utilisateur</title>
+        <title>Espace Administrateur</title>
         <nav class="nav">
             <div class="container">
                 <div class="logo">
