--- a/src/main/resources/templates/pageUser.html
+++ b/src/main/resources/templates/pageUser.html
@@ -7,6 +7,7 @@
     <title>Page Utilisateur</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}" href="../static/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}" href="../static/css/common.css" />
+    <link rel="icon" type="image/x-icon" href="/favicon.png" /><link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
 </head>
 
 <body>
