--- a/src/main/resources/templates/twitter/postTweet.html
+++ b/src/main/resources/templates/twitter/postTweet.html
@@ -1,26 +1,27 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
     xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Poster un tweet</title>
+    <title>Exécuter les volontés</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}" href="../../static/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}" href="../../static/css/common.css" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/postTweet.css}" href="../../static/css/postTweet.css" />
+    <link rel="icon" type="image/x-icon" href="/favicon.png" /><link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
 </head>
 
 <body>
 
     <div class="container">
         <!--/* On affiche un éventuel message d'erreur */-->
-        <h3 th:text="${resultat}">Message de succès ou d'erreur</h3>
+        <!--<h3 th:text="${resultat}">Message de succès ou d'erreur</h3>
         <form method="POST" th:action="@{/twitter/tweet}" class="form-signin">
             <h2 class="form-signin-heading">Retweeter</h2>
             <h4>(bug sur 'poster un tweet', dommage !)</h4>
             <div class='form-group'>
                 <!--/* <input type="text" name="message" value="1380430292486328324" class="form-control" placeholder="Id du tweet" autofocus="true" /> */-->
-                <input type="text" name="tweetId" value="1380430292486328324" class="form-control" placeholder="Id du tweet" autofocus="true" />
+                <!--<input type="text" name="tweetId" value="1380430292486328324" class="form-control" placeholder="Id du tweet" autofocus="true" />
             </div>
 
             <button class="btn btn-lg btn-primary btn-block" type="submit">Poster le tweet</button>
@@ -32,4 +33,40 @@
     <script th:src="@{/js/bootstrap.min.js}" src="../static/js/bootstrap.min.js"></script>
 </body>
 
+</html>-->
+                
+                
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Exécuter les volontés</title>
+        <link rel="stylesheet" type="text/css" th:href="@{/css/postTweet.css}" href="../../static/css/postTweet.css" />
+
+        <link rel="icon" type="image/x-icon" href="/favicon.png" />
+        <link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
+    </head>
+    <body>
+        <div class="container">
+            <!--/* On affiche un éventuel message d'erreur */-->
+            <img src="/Logo.png" id="logo">
+            <img src="/twitter.png" id="twi">
+            <form method="POST" th:action="@{/twitter/tweet}" class="form-signin">
+                <h2 class="form-signin-heading">Retweeter</h2>
+                <h3>Nous ne pouvons pas encore choisir le tweet que vous pouvez retweeter,
+                  c'est pour cela que le champ suivant est pré-rempli :</h3>
+                <div class="form-group">
+                    <!--/* <input type="text" name="message" value="1380430292486328324" class="form-control" placeholder="Id du tweet" autofocus="true" /> */-->
+                    <input type="text" name="tweetId" value="1384050944984289282" class="form-control" placeholder="Id du tweet" autofocus="true"/>
+                </div>
+
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Retweeter</button>
+            </form>
+            <a href="welcome.html" th:href="@{/}">Retour au menu principal</a>
+        </div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script th:src="@{/js/bootstrap.min.js}" src="../static/js/bootstrap.min.js"></script>
+    </body>
 </html>
