--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -4,9 +4,10 @@
         <head>
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <title>Welcome</title>
+            <title>Accueil</title>
             <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}" href="../static/css/bootstrap.min.css" />
             <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" href="../static/css/style.css" />
+            <link rel="icon" type="image/x-icon" href="/favicon.png" /><link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
             <link th:href="@{https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,900&display=swap}" rel='stylesheet' type='text/css' />
         </head>
         <body>
@@ -25,8 +26,9 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <meta http-equiv="X-UA-Compatible" content="ie=edge" />
             <link rel="stylesheet" type="text/css" th:href="@{/css/espaceUtilisateur.css}" href="../static/css/espaceUtilisateur.css" />
+            <link rel="icon" type="image/x-icon" href="/favicon.png" /><link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
 
-            <title>Espace utilisateur</title>
+            <title>Espace Utilisateur</title>
             <nav class="nav">
                 <div class="container">
                     <div class="logo">
