--- a/src/main/resources/templates/pageSouvenir.html
+++ b/src/main/resources/templates/pageSouvenir.html
@@ -40,7 +40,7 @@
                 <input type="file" id="joindre" name="joindre">
                 <p>Vos fichiers déjà insérés : </p>
                 <div id="fichiers">
-                    Fichiers ajoutés apparaitront ici <br><a href="">Fichier1</a>
+                    <a href="">Fichier Exemple</a>
                 </div>
             </div>
             <div id="zoneTexte">
