--- a/src/main/resources/templates/pageUser.html
+++ b/src/main/resources/templates/pageUser.html
@@ -1,3 +1,7 @@
+
+
+<!-- Page non utilisée mais potentiellement utile pour la suite si on se connecte à plusieurs réseaux-->
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
 
